--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <html>
 <head>
-  <title>My app</title>
-  </head>
-  <body>
-    <h1>Eleventh commandment</h1>
-    <p>Thou shalt learn how to push. It is the eleventh commandment!</p>
-    </body>
-    </html>
+<title>resume</title>
+</head>
+<body>
+<h1>Microsoft Office User</h1>  
+<h4>Proffession or industry Link to other online Properties : Portfolio/Website/Blog</h4>
+<h2>OBJECTIVE</h2>
+<p>To get started, click the place holdertext and start typing. Be brief: use one or two sentences.
+<h2>SKILLS</h2>
+<p>Explain what you're especially good at. What sets you apart? Use your own language – not jargon.</h2>
+<h2>EXPERIENCE<h/2>
+<h4>​JOB TITLE • COMPANY • DATES FROM – TO</h4>
+<p>Summarise your key responsibilities, leadership and biggest accomplishments.  Don't list everything – keep it relevant and include information that shows the impact that you made.</p>
+<h4>JOB TITLE • COMPANY • DATES FROM – TO</h4>
+<p>Think about the size of the teams you've led, the number of projects you've managed successfully or the number of articles you've written.</p>
+<h2>EDUCATION</h2>
+<h4>DEGREE OR QUALIFICATION • DATE EARNED • UNIVERSITY OR COLLEGE</h4>
+<p>In the Home tab of the ribbon, take a look at Styles to apply the formatting you need with just a click.</p>
+<h2>VOLUNTEER EXPERIENCE OR LEADERSHIP</h2>
+<p>Did you manage a team for your club, lead a campaign for your favourite charity or edit your school's newspaper? Go ahead and describe experiences that illustrate your leadership abilities..</p>
+</body>
+</html>
+
+ 
+
+
