--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <h1>Microsoft Office User</h1>  
 <h4>Proffession or industry Link to other online Properties : Portfolio/Website/Blog</h4>
 <h2>OBJECTIVE</h2>
-<p>To get started, click the place holdertext and start typing. Be brief: use one or two sentences.
 <h2>SKILLS</h2>
-<p>Explain what you're especially good at. What sets you apart? Use your own language – not jargon.</h2>
+<p>I am really good at a lot of things that I do not even know where to start I am a good swimmer , football player and I play golf too. I have recently taken some interest in computer programming and I am doing well at it right now.</p>
 <h2>EXPERIENCE<h/2>
 <h4>​JOB TITLE • COMPANY • DATES FROM – TO</h4>
 <p>Summarise your key responsibilities, leadership and biggest accomplishments.  Don't list everything – keep it relevant and include information that shows the impact that you made.</p>
@@ -16,7 +15,6 @@
 <p>Think about the size of the teams you've led, the number of projects you've managed successfully or the number of articles you've written.</p>
 <h2>EDUCATION</h2>
 <h4>DEGREE OR QUALIFICATION • DATE EARNED • UNIVERSITY OR COLLEGE</h4>
-<p>In the Home tab of the ribbon, take a look at Styles to apply the formatting you need with just a click.</p>
 <h2>VOLUNTEER EXPERIENCE OR LEADERSHIP</h2>
 <p>Did you manage a team for your club, lead a campaign for your favourite charity or edit your school's newspaper? Go ahead and describe experiences that illustrate your leadership abilities..</p>
 </body>
