--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 <h1>Microsoft Office User</h1>  
 <h4>Proffession or industry Link to other online Properties : Portfolio/Website/Blog</h4>
 <h2>OBJECTIVE</h2>
-<h2>SKILLS</h2>
+<h2>Skills</h2>
 <p>I am really good at a lot of things that I do not even know where to start I am a good swimmer , football player and I play golf too. I have recently taken some interest in computer programming and I am doing well at it right now.</p>
 <h2>EXPERIENCE<h/2>
-<h4>​JOB TITLE • COMPANY • DATES FROM – TO</h4>
-<p>Summarise your key responsibilities, leadership and biggest accomplishments.  Don't list everything – keep it relevant and include information that shows the impact that you made.</p>
-<h4>JOB TITLE • COMPANY • DATES FROM – TO</h4>
-<p>Think about the size of the teams you've led, the number of projects you've managed successfully or the number of articles you've written.</p>
+<p> • Financial Analyst •Lenovo Technologies - From 2001 to 2009</p>
+<p>I was the officer in charge of the financial side of the company Lenovo technologies where I made recommendations on how to bolster the sales of the company and how to invest its money in various businesses in Botswana and the company under my graceful 
+guidance made gross profits of more than 4 million pula and I am part of the reason why it is such a large company that employs over 3400 Batswana today. With a team of 20 people I was able to do my job dilligently and I really loved the leadership I did. 
+I am the kind of person who doing things himself for them to be perfect, like leading a team.</p>
 <h2>EDUCATION</h2>
-<h4>DEGREE OR QUALIFICATION • DATE EARNED • UNIVERSITY OR COLLEGE</h4>
+<p>I have a degree in Business Economics and a diploma in  Computer Science which I both got from University of Botswana from 1995 to 2000</p>
 <h2>VOLUNTEER EXPERIENCE OR LEADERSHIP</h2>
-<p>Did you manage a team for your club, lead a campaign for your favourite charity or edit your school's newspaper? Go ahead and describe experiences that illustrate your leadership abilities..</p>
+<p>I once coached University of Botswanas football team during varsity years and they went on to take the second spot in University Soccer League where they played against many other universities in Botswana.
+The competition was tough but we were able to pull it because the biys were very disiplined because they had a very charismatic leader who offered his support throughout the journey as it was his job.</p>
 </body>
 </html>
 
